Fixing z-index

--- a/src/app/shared/components/nav/nav.component.scss
+++ b/src/app/shared/components/nav/nav.component.scss
@@ -27,7 +27,7 @@
     top: -3rem;
     background: $blue;
     display: none !important;
-    z-index: 100;
+    z-index: 1000;
 
     &.showMenu {
       display: flex !important;
